feat: Implement syscall tracing with name and argument display
This commit introduces the core functionality of tracing system calls made by the child process and displaying basic information about them.

Key changes:
- Adds the `syscalls` crate dependency to map syscall numbers to names.
- Sets the `PTRACE_O_TRACESYSGOOD` option after initial attach.
- Implements the main tracing loop using `ptrace::syscall` to step through syscalls and `waitpid` to wait for stops.
- Handles process termination (`WaitStatus::Exited`, `WaitStatus::Signaled`) and errors (`ESRCH`).
- Identifies syscall entry/exit stops based on `WaitStatus::Stopped` with the `TRACESYSGOOD` signal check (`SIGTRAP | 0x80`) and also handles `WaitStatus::PtraceSyscall` status.
- On `x86_64` architecture:
    - Uses `ptrace::getregs` to fetch register state during syscall stops.
    - Tracks syscall entry/exit using a flag (`is_entering_syscall`).
    - On entry: Reads `orig_rax` for the syscall number, uses `Sysno::new` and `syscall.name()` to get the name (with fallback for unknown numbers), and prints the name along with raw hex values of the first six argument registers (`rdi`, `rsi`, `rdx`, `r10`, `r8`, `r9`).
    - On exit: Reads `rax` for the return value and prints it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nix = { version = "0.29.0", features = ["ptrace", "signal"]}
+nix = { version = "0.29.0", features = ["ptrace", "signal", "process", "uio"]}
+syscalls = "0.6.18"
